# scope-crawler

./: Cargo.toml
src/: main.rs
test/: deep.ts  simple.js  simple.ts
