[package]
name = "scope-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
tree-sitter = "0.20.10"
tree-sitter-javascript = "0.20.1"
