[package]
name = "scope-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
tree-sitter = "0.20.10"
tree-sitter-javascript = "0.20.1"
stack-graphs = { git = "https://github.com/github/stack-graphs", branch = "main" }
tree-sitter-stack-graphs = { git = "https://github.com/github/stack-graphs", branch = "main" }
tree-sitter-stack-graphs-typescript = { git = "https://github.com/github/stack-graphs", branch = "main" }
tree-sitter-stack-graphs-javascript = { git = "https://github.com/github/stack-graphs", branch = "main" }
tree-sitter-typescript = "0.20.2"
lsp-positions = { git = "https://github.com/github/stack-graphs", branch = "main" }
